fix align

--- a/assets/styles/task6.css
+++ b/assets/styles/task6.css
@@ -7,7 +7,6 @@ body{
 }
 .add{
     display: flex;
-    flex-direction: column;
     justify-content: center;
     height: 100vh;
     width: 17%;
